kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: madhouseminers
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - port: 4000
      targetPort: 4000
      name: graphql
